fix: resolve header cropping after error message display

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
-.mobile-arc{
+.background-arc{
+  height: 100vh;
   position: absolute;
+  overflow: hidden;
   z-index: -1;
+}
+
+.mobile-arc{
+  height: 100%;
 }
 
 /* main quiz body*/
@@ -8,8 +14,6 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-500);
-  
-  /* todo: for mobile bottom margin is not there*/
   margin: var(--spacing-400) var(--spacing-300);
   color: red;
 }
@@ -34,10 +38,12 @@
 
 @media (min-width: 64rem) {
   .mobile-arc {
-    width: 1440px;
-    height: 960px;
-    left: 50%;
-    transform: translateX(-50%);
+    /*width: 1440px;*/
+    /*height: 960px;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*left: 50%;*/
+    /*transform: translateX(-50%);*/
   }
   
   .quiz{
