--- a/src/index.css
+++ b/src/index.css
@@ -39,8 +39,6 @@
   --font-base: 1.25rem;   /* 20px */
   --font-sm: 1.125rem;    /* 18px */
   --font-xs: 0.875rem;    /* 14px */
-  
-  /*color-scheme: light dark;*/
 }
 
 @font-face {
@@ -64,8 +62,6 @@
   flex-direction: column;
   background-color: var(--color-grey-50);
   min-height: 100vh;
-  position: relative;
-  overflow: hidden;
 }
 
 /* background-color for each language*/
